本地化引用修改

--- a/localisation/simp_chinese/jobs_sea_l_simp_chinese.yml
+++ b/localisation/simp_chinese/jobs_sea_l_simp_chinese.yml
@@ -154,3 +154,10 @@ mod_job_sea_relay_add: "$job_sea_relay$岗位"
 mod_job_sea_relay_per_pop: "每$VALUE$个人口提供§G+1§!个$job_sea_relay$岗位"
 mod_job_sea_relay_per_pop_short: "\n每$VALUE$ £pop£ §G+1§! £mod_job_sea_relay_add£"
 
+getengineer_sea: "工程海嗣个体"
+getenvoy_sea: "对外海嗣"
+getenvoyplural_sea: "对外海嗣"
+getlinguists_sea: "次言者"
+getresearchers_sea: "塑路者"
+getterraformer_sea: "环境改造恐鱼"
+getbrainname_sea: "大群核心"
